RoundRobin_Example/Gateway.yaml
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld-gw
spec:
  servers:
    - hosts:
        - 'myapps.apps.mycluster.com' # Domain name of the external website
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway # use Istio default gateway implementation
