RoundRobin_Example/VirtualService.yaml
  
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld-vs
spec:
  hosts:
    - '*' # Copy the value in the Gateway hosts
  gateways:
    - helloworld-gw
  http:
    - match:
        - uri:
            prefix: /istio
      route:
        - destination:
            host: helloworld # The Service DNS name
            port:
              number: 80
